# Cynosure

./: BUILD_FIX_SUMMARY.md  BUILD_STATUS.md  COMM_MODULE_TEMPLATE.md  Cargo.toml  DEPLOYMENT_READY.md  DEPLOY_FILE_TRANSFER.md  EDR_AGENT_SETUP.md  FILE_TRANSFER_MODULES.md  FILE_TRANSPORTS_BUILD.md  FINAL_STATUS_REPORT.md  FINAL_TESTING_REPORT.md  FINAL_VERIFICATION_COMPLETE.md  IMPLEMENT_FILE_TRANSFER.md  LATEST_CHANGES.md  Makefile  QUICK_START.md  README.MD  README.md  RL_BEACON_AGENT.md  RL_INTEGRATION_SUMMARY.md  RL_MODEL_SUMMARY.md  RL_TRAINING_SYSTEM_DESIGN.md  SECURITY_FIX_VERIFICATION_REPORT.md  SHELL_AND_POPUPS_UPDATE.md  advanced_training.py  build_file_transports.sh  convert_bmp_to_png.py  convert_screenshot.sh  detection_simulator.py  extended_training.py  requirements-rl.txt  start_rl_service.sh  test.txt  test_rl_agent.py  training_client_spec.md  training_flow_spec.md  training_server_spec.md  training_tui_spec.md  upload_test.txt
@workspace/src/: loader.rs  main.rs  module.rs
completed/Comm/HTTPS/: build.sh  https_comm.c
modules/Comm/DNS/: Cargo.toml  build.rs  dns_comm.c  dns_comm.h  main.rs
modules/Comm/FileBeacon/: Cargo.toml  build.sh  file_beacon_comm.c
modules/Comm/FileHTTP/: Cargo.toml  build.sh  (+1 more)
modules/Comm/VPN/: Cargo.toml  build.rs  compile_windows.sh  main.rs  vpn_comm.c  vpn_comm.def
src/: dispatcher.h  listener.rs  loader.rs  main.rs  module.rs  rl_beacon_agent.py  rl_beacon_service.py  rl_evasion_config.py
src/implant/: edr_agent.c  edr_dispatcher.c  edr_dispatcher.h  edr_interfaces.h  edr_plugin.h  edr_types.h  stub_plugin.c
(+14 files in other folders)
